--- a/Readme
+++ b/Readme
@@ -66,5 +66,6 @@ By Joy, joy@cs.cmu.edu
 		TypeTokenFreqInCorpus
 			Output the type/token statistics of the corpus
 
-5) Quesitons, comments and suggestions?
+5) Questions, comments and suggestions?
 Please email joy+salm@cs.cmu.edu
+   
